# durak

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ai_difficulty.md  issues.md
docs/: ai_difficulty.md  todo.md
src/: app.rs  main.rs
src/app/: ai_handler.rs  app_core.rs  game_actions.rs  game_loop.rs  input.rs  logic.rs  mod.rs  render.rs  state.rs
src/game/: ai.rs  ai_logic_test.rs  card.rs  deck.rs  game_state.rs  mod.rs  player.rs
src/ui/: card_view.rs  debug_overlay.rs  game_ui.rs  mod.rs
